@@ -46,7 +46,7 @@ require_once dirname(__FILE__).'/testPageMaps.php';
 require_once dirname(__FILE__).'/testPageNodes.php';
 require_once dirname(__FILE__).'/testPageOverview.php';
 require_once dirname(__FILE__).'/testPagePopup.php';
-require_once dirname(__FILE__).'/testPageQueueDetails.php';
+//require_once dirname(__FILE__).'/testPageQueueDetails.php';
 //require_once dirname(__FILE__).'/testPageQueueOverview.php';
 //require_once dirname(__FILE__).'/testPageQueueOverviewByProxy.php';
 require_once dirname(__FILE__).'/testPageScreens.php';
@@ -136,9 +136,9 @@ class SeleniumTests {
 		$suite->addTestSuite('testPageNodes');
 		$suite->addTestSuite('testPageOverview');
 		$suite->addTestSuite('testPagePopup');
-		$suite->addTestSuite('testPageQueueDetails');
-		$suite->addTestSuite('testPageQueueOverview');
-		$suite->addTestSuite('testPageQueueOverviewByProxy');
+//		$suite->addTestSuite('testPageQueueDetails');
+//		$suite->addTestSuite('testPageQueueOverview');
+//		$suite->addTestSuite('testPageQueueOverviewByProxy');
 		$suite->addTestSuite('testPageScreens');
 		$suite->addTestSuite('testPageSearch');
 		$suite->addTestSuite('testPageSlideShows');
